--- a/main.css
+++ b/main.css
@@ -204,8 +204,12 @@ footer p {
     padding: 48px 0;
   }
 
+  h3 {
+    font-size: 16px;
+  }
+
   section div.organization {
-    margin: 16px 0;
+    margin: 64px 0;
   }
 
   body {
@@ -232,3 +236,4 @@ footer p {
 .red {
   color: red;
 }
+
