--- a/main.css
+++ b/main.css
@@ -74,9 +74,8 @@ ol > li {
   margin-bottom: 1.5rem;
 }
 
-h5.underlined-caps {
+#c47 {
   text-decoration: underline;
-  text-transform: uppercase;
   font-size: 0.8rem;
   margin: 0 0 8px 0;
 }
@@ -255,4 +254,21 @@ footer p {
 
 .red {
   color: red;
+}
+
+#a3348, #a3349, #a3350, #a3351 {
+  margin-top: 3rem;
+}
+
+#a3348 h4, #a3350 h4 {
+  margin-top: 0;
+  color: red;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.caps {
+  text-transform: uppercase;
 }
